# weekly-markdown

./: .gitignore  LICENSE  README.md  app.py  config.py  config.yaml  lit_routes.py  main.py  main_routes.py  models.py  mypy.ini  pyproject.toml  routes_lit.py  routes_main.py  routes_scheduler.py  routes_todo.py  test.db  tox.ini
configs/: annotate.yaml  append.yaml  archive.yaml  create.yaml  find.yaml  move.yaml
documentation/: google-calendar.md
src/: config.yaml
src/weekly_markdown/: summary.py  test.ipynb  util.py  your_file.md
static/css/: main.css
templates/: base.html  base_scheduler.html  completed.html  index.html  lit_base.html  literature.html  macros.html  scheduler.html  search_results.html  update.html  update_lit.html  week.html
tests/unit/weekly_markdown/: test_util.py
